Fixed issues from first review
- Corrected indention
- removed commented code
- changed default property to ignore system trust
- Added copyright for SSL Context part